# data_checklist

./: README.md  main.py  pvi_analysis.py  pyproject.toml  requirements.txt
configs/: config.yaml
configs/data/: anthropic.yaml  anthropic_helpful.yaml  cola.yaml  dwmw.yaml  multi_nli.yaml  shp.yaml  snli.yaml  test.yaml  ultrafeedback.yaml
configs/model/: distilGPT2.yaml  flan-t5-xl.yaml  llama2-7b.yaml  mistral-7b.yaml  t5-base.yaml  t5-large.yaml  t5-small.yaml
configs/transform_model/: distilGPT2.yaml  llama2-7b.yaml  mixtral-8x7b.yaml
direct-preference-optimization/: load_vinfo.py  preference_datasets.py  train.py  trainers.py
direct-preference-optimization/config/: config.yaml
direct-preference-optimization/config/loss/: none.yaml
direct-preference-optimization/config/model/: llama2-7b.yaml  mistral-7b.yaml
src/: data_checklist.py  data_transforms.py  dataloader.py  format_shp.py  trainer.py  trainer_clm.py  trainer_seq2seq.py  utils.py
test/: dataloader_test.py  test_complexity.py  test_fsdp.py  test_mixtral.py  test_noneng_transform.py  test_transform.py
test/data/: test_dataset.csv
