[tool.poetry]
name = "data-topo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.3.2"
datasets = "^2.14.6"
transformers = {git = "https://github.com/huggingface/transformers"}
evaluate = "^0.4.1"
peft = "^0.6.0"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
absl-py = "^2.0.0"
spacy = "^3.7.2"
spacytextblob = "^4.0.0"
pysbd = "^0.3.4"
deepspeed = "^0.12.4"
pytorch-triton = { url = "https://download.pytorch.org/whl/nightly/pytorch_triton-2.2.0%2Be28a256d71-cp310-cp310-linux_x86_64.whl" }
torch = { url = "https://download.pytorch.org/whl/nightly/cu121/torch-2.3.0.dev20240118%2Bcu121-cp310-cp310-linux_x86_64.whl", markers = "extra=='nightly'" }
wandb = "^0.16.2"
matplotlib = "^3.8.2"
pycld2 = "^0.41"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
